# connected-papers

./: Cargo.toml  README.md
.github/workflow/: test.yml
examples/: graph.rs  graph_stream.rs
mcp-server/: Cargo.toml
src/: client.rs  error.rs  lib.rs  utils.rs
src/ss/: client.rs  graph.rs  mod.rs  models.rs
src/ss/graph/: autocomplete.rs  batch.rs  mod.rs  models.rs  search.rs
src/ss/graph/search/: bulk.rs  mod.rs  paper_id.rs  relevance.rs  title.rs
