[workspace]
resolver = "3"
members = [".", "mcp-server"]

[workspace.package]
authors = ["tangxiangong <tangxiangong@gmail.com>"]
version = "0.1.0"
edition = "2024"
repository = "https://github.com/tangxiangong/connected-papers"
license = "MIT or Apache-2.0"

[workspace.dependencies]
async-stream = "0.3"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
reqwest = { version = "0.13", features = ["json", "query"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time"] }

[package]
name = "connected-papers"
authors.workspace = true
version.workspace = true
edition.workspace = true
description = "A Rust client for Connected Papers integrated with Semantic Scholar utilities."
repository.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
async-stream = { workspace = true, optional = true }
chrono = { workspace = true }
futures = { workspace = true, optional = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }

[package.metadata.docs.rs]
features = ["stream"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
stream = ["dep:futures", "dep:async-stream", "dep:tokio"]

[[example]]
name = "graph_stream"
path = "examples/graph_stream.rs"
required-features = ["stream"]
