[package]
name = "connected-papers-mcp"
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
connected-papers = { version = "0.1", path = "../" }
rmcp = { version = "0.12", features = [
    "server",
    "macros",
    "transport-io",
    "schemars",
] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "std",
    "fmt",
] }
